--- a/WebApplication1/Areas/webmaster/Views/titulares/agregarTitulo.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/titulares/agregarTitulo.cshtml
@@ -124,7 +124,7 @@
                                         <option value="@item.id">@item.first_name</option>
                                     }
                                 </select>
-                                <small class="form-text text-muted">Lista de comunidades</small>
+                                <small class="form-text text-muted">Lista de comunidades (Solo disponibles las comunidades que posean administradores)</small>
                             </div>
                         </div>
 
