--- a/WebApplication1/Areas/webmaster/Views/titulares/editarTitulo.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/titulares/editarTitulo.cshtml
@@ -132,7 +132,7 @@
 
                                         }
                                     </select>
-                                    @*<small class="form-text text-muted">Lista de comunidades</small>*@
+                                    <small class="form-text text-muted">Lista de comunidades (Solo disponibles las comunidades que posean administradores)</small>
                                 </div>
                             </div>
                             <div class="form-divider"></div>
