--- a/WebApplication1/Areas/webmaster/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/Shared/_Layout.cshtml
@@ -1886,6 +1886,7 @@
         }
 
         function onSearchTitularCommunity() {
+            $("#id-search-category").removeClass('is-invalid');
             $("#searchCommunityForm").submit();
         }
 
