--- a/WebApplication1/Areas/webmaster/Views/titulares/agregarVehiculo.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/titulares/agregarVehiculo.cshtml
@@ -58,6 +58,9 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "webmaster" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
+                            <li class="breadcrumb-item"><a href="@Url.Action("listado", "titulares", new { area = "webmaster" })" class="text-success">Titulares</a></li>
+                            <li class="breadcrumb-item"><a href="@Url.Action("listadoTitulos", "titulares", new { area = "webmaster", id = Model.titulo.IdUser })" class="text-success">Títulos</a></li>
+                            <li class="breadcrumb-item"><a href="@Url.Action("listadoVehiculos", "titulares", new { area = "webmaster", Id = Model.titulo.Id })" class="text-success">Vehículos</a></li>
                             <li class="breadcrumb-item active">Agregar vehículo</li>
                         </ul>
                     </div>
@@ -94,7 +97,7 @@
                         {
                             id = "newresidentForm",
                             @class = "",
-                            area = "coadmin",
+                            area = "webmaster",
                             enctype = "multipart/form-data"
                         }))
                     {
