--- a/WebApplication1/Areas/coadmin/Views/titulares/listado.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/titulares/listado.cshtml
@@ -20,7 +20,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
-                            <li class="breadcrumb-item active">Listado de titulares</li>
+                            <li class="breadcrumb-item active">Titulares</li>
                         </ul>
                     </div>
                 </div>
