--- a/WebApplication1/Areas/coadmin/Views/titulares/listadoTitulos.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/titulares/listadoTitulos.cshtml
@@ -19,7 +19,8 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
-                            <li class="breadcrumb-item active">Listado de títulos</li>
+                            <li class="breadcrumb-item"><a href="@Url.Action("listado", "titulares", new { area = "coadmin" })" class="text-success">Titulares</a></li>
+                            <li class="breadcrumb-item active">Títulos</li>
                         </ul>
                     </div>
                 </div>
