--- a/WebApplication1/Areas/coadmin/Views/titulares/verTitulo.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/titulares/verTitulo.cshtml
@@ -56,6 +56,8 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
+                            <li class="breadcrumb-item"><a href="@Url.Action("listado", "titulares", new { area = "coadmin" })" class="text-success">Titulares</a></li>
+                            <li class="breadcrumb-item"><a href="@Url.Action("listadoTitulos", "titulares", new { area = "coadmin", id = Model.titulo.IdUser })" class="text-success">Títulos</a></li>
                             <li class="breadcrumb-item active">Ver título</li>
                         </ul>
                     </div>
