--- a/WebApplication1/Areas/webmaster/Views/titulares/agregar.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/titulares/agregar.cshtml
@@ -58,6 +58,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "webmaster" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
+                            <li class="breadcrumb-item active"><a href="@Url.Action("listado", "titulares", new { area = "webmaster" })" class="text-success">Titulares</a></li>
                             <li class="breadcrumb-item active">Agregar titular</li>
                         </ul>
                     </div>
