--- a/WebApplication1/Areas/webmaster/Views/titulares/editar.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/titulares/editar.cshtml
@@ -55,6 +55,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "webmaster" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
+                            <li class="breadcrumb-item"><a href="@Url.Action("listado", "titulares", new { area = "webmaster" })" class="text-success">Titulares</a></li>
                             <li class="breadcrumb-item active">Editar titular</li>
                         </ul>
                     </div>
@@ -90,6 +91,7 @@
                         {
                             id = "editresidentForm",
                             @class = "",
+                             area = "webmaster",
                             enctype = "multipart/form-data"
                         }))
                     {
