--- a/WebApplication1/Areas/webmaster/Views/titulares/listadoVehiculos.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/titulares/listadoVehiculos.cshtml
@@ -19,7 +19,9 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "webmaster" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
-                            <li class="breadcrumb-item active">Listado de vehículos</li>
+                            <li class="breadcrumb-item"><a href="@Url.Action("listado", "titulares", new { area = "webmaster" })" class="text-success">Titulares</a></li>
+                            <li class="breadcrumb-item"><a href="@Url.Action("listadoTitulos", "titulares", new { area = "webmaster", id = Model.titulo.IdUser })" class="text-success">Títulos</a></li>
+                            <li class="breadcrumb-item active">Vehículos</li>
                         </ul>
                     </div>
                 </div>
