--- a/WebApplication1/Views/facilidades/reservas.cshtml
+++ b/WebApplication1/Views/facilidades/reservas.cshtml
@@ -63,21 +63,20 @@
                                         <th class="f-b">Descripción</th>
                                         <th class="f-b">Hora inicio</th>
                                         <th class="f-b">Hora fin</th>
-                                        <th class="f-b">Intervalo</th>
                                         <th class="f-b">Estado</th>
-                                        <th class="f-b">Factura</th>
+                                        <th class="f-b">Costo</th>
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    @foreach (var item in Model.efacList)
+                                    @*alter table [pjrdev_condominios].[dbo].[book] add [id_efac] bigint null*@
+                                    @foreach (var item in Model.bookList)
                                     {
                                         <tr>
-                                            <td>@Convert.ToDateTime(item.created_at).ToString("MM/dd/yyyy")</td>
+                                            <td>@Convert.ToDateTime(item.requested_date).ToString("MM/dd/yyyy")</td>
                                             <td>@item.first_name</td>
                                             <td>@item.description .</td>
                                             <td class="text-center">@DateTime.Today.Add(item.start_time).ToString("hh:mm tt")</td>
-                                            <td class="text-center">@DateTime.Today.Add(item.end_time).ToString("hh:mm tt")</td>
-                                            <td class="text-center">@item.interval hours</td>
+                                            <td class="text-center">@DateTime.Today.Add(item.end_time).ToString("hh:mm tt")</td>                                            
                                             @if (item.status == 1)
                                             {
                                                 <td class="text-center"><button type="button" class="btn btn-warning waves-effect waves-light btn-sm mb-1">Pendiente</button></td>
@@ -91,23 +90,7 @@
                                                 <td class="text-center"><button type="button" class="btn btn-danger waves-effect waves-light btn-sm mb-1">Rechazado</button></td>
                                             }
                                             <td class="text-center">
-                                                @if (item.upload_regulation != null &&
-                                                    (item.status == 2 || item.status == 1))
-                                                {
-                                                    <a href="~/Upload/Regulation/@item.upload_regulation">
-                                                        <button type="button" class="btn btn-info waves-effect waves-light btn-sm">
-                                                            <i class="mdi mdi-cloud-download  m-r-5"></i> Descargar
-                                                        </button>
-                                                    </a>
-                                                }
-                                                else
-                                                {
-                                                    @*<a href="">
-                            <button type="button" class="btn btn-info waves-effect waves-light btn-sm">
-                                <i class="mdi mdi-cloud-download  m-r-5"></i> Descargar
-                            </button>
-                        </a>*@
-                                                }
+                                               @item.cost_reservation.ToString().Replace(',', '.')
                                             </td>
                                         </tr>
                                     }
