--- a/WebApplication1/Areas/coadmin/Views/facilidades/solicitudes.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/facilidades/solicitudes.cshtml
@@ -88,13 +88,13 @@
                                     <tr>
                                         <th class="f-b">Fecha de solicitud</th>
                                         <th class="f-b">Nombre</th>
-                                        <th class="f-b">Descripción de la actividad</th>
+                                        @*<th class="f-b">Descripción de la actividad</th>*@
                                         <th class="f-b">Hora inicio</th>
                                         <th class="f-b">Hora fin</th>
-                                        <th class="f-b">Intervalo</th>
+                                        @*<th class="f-b">Intervalo</th>*@
                                         <th class="f-b">Estado</th>
-                                        @*<th class="f-b">Solicitud</th>*@
-                                        <th class="f-b">Reglamento</th>
+                                        <th class="f-b">Opciones adicionales</th>
+                                        @*<th class="f-b">Reglamento</th>*@
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -108,58 +108,22 @@
                                             <td class="text-center">@DateTime.Today.Add(item.end_time).ToString("hh:mm tt")</td>
                                             <td class="text-center">@item.duration horas</td>
                                             <td class="text-center">
+
                                                 @if (item.status == 1)
                                                 {
-                                                    <button  onclick="onActiveSolicitud(this)"  data-id="@item.id"    type="button" class="btn btn-danger waves-effect waves-light btn-sm" >Rechazado</button>
+                                                <button onclick="onAprobar(this)" data-id="@item.id" type="button" class="btn btn-warning waves-effect waves-light btn-sm mb-1">Pendiente</button>
+
                                                 }
-                                                else if(item.status == 2)
+                                                else if (item.status == 2)
                                                 {
-                                                    <button onclick="onActiveSolicitud(this)" data-id="@item.id"  type="button"  class="btn btn-warning waves-effect waves-light btn-sm mb-1">Por confirmar</button>
+                                                    <button onclick="onAprobar(this)" data-id="@item.id" type="button" class="btn btn-primary waves-effect waves-light btn-sm">Aprobado</button>
                                                 }
-                                                else{
-                                                     <button onclick="onActiveSolicitud(this)" data-id="@item.id"  type="button"  class="btn btn-primary waves-effect waves-light btn-sm mb-1">Aprobado</button>
+                                                else
+                                                {
+                                                    <button onclick="onAprobar(this)" data-id="@item.id" type="button" class="btn btn-danger waves-effect waves-light btn-sm">Rechazado</button>
                                                 }
-                                             
-                                            </td>
-                                            @*<td class="text-center">
-                                                <button type="button" 
-                                                    class="btn btn-primary waves-effect waves-light btn-sm mr-1 mb-1" 
-                                                    data-toggle="tooltip" data-placement="top" title="Aprobar">
-                                                    <i class="mdi mdi-thumb-up"></i>
-                                                </button>
-                                                <button type="button" 
-                                                    class="btn btn-danger waves-effect waves-light btn-sm mb-1"
-                                                    data-toggle="tooltip" 
-                                                    data-placement="top" title="Rechazar">
-                                                    <i class="mdi mdi-thumb-down"></i>
-                                                </button>
-                                            </td>*@
-                                        <td class="text-center">
-                                            @if (item.upload_regulation != null)
-                                            {
-                                                <a href="~/Upload/Regulation/@item.upload_regulation" download="">
-                                                    <button type="button" class="btn btn-info waves-effect waves-light btn-sm"
-                                                            data-toggle="tooltip" data-placement="top" title="Descargar">
-                                                        <i class="mdi mdi-cloud-download"></i>
-                                                    </button>
-                                                </a>
 
-                                             
-
-                                            }
-                                            else
-                                            {
-                                                <a href="">
-                                                    <button type="button" class="btn btn-info waves-effect waves-light btn-sm"
-                                                            data-toggle="tooltip" data-placement="top" title="Descargar">
-                                                        <i class="mdi mdi-cloud-download"></i>
-                                                    </button>
-                                                </a>
-                                            }
-
-
-                                        </td>
-
+                                            </td>                                                                                    
                                         </tr>
                                     }
                                 </tbody>
